# DanmakuSplitTUI

./: LICENSE  README.md  main.py  pyproject.toml  tui.py
src/danmaku_split_tui/: __init__.py  main.py  splitter.py  styles.tcss  tui.py
